# BTTK

./: README.md
bttk/: CMakeLists.txt  MedicalImageReader.cpp  MedicalImageReader.h  main.cpp
bttk-build/: CMakeCache.txt  Makefile  bttk.cbp  cmake_install.cmake
